@@ -2,6 +2,7 @@ package com.nongsabu.backend.domain.report.service;
 
 import com.nongsabu.backend.common.exception.BusinessException;
 import com.nongsabu.backend.domain.document.service.RagService;
+import com.nongsabu.backend.domain.externalapilog.service.ExternalApiLogService;
 import com.nongsabu.backend.domain.image.entity.ImageAnalysisResult;
 import com.nongsabu.backend.domain.image.entity.UploadedImage;
 import com.nongsabu.backend.domain.image.repository.ImageAnalysisResultRepository;
@@ -10,9 +11,11 @@ import com.nongsabu.backend.domain.report.dto.AnalysisReportResponse;
 import com.nongsabu.backend.domain.report.entity.AnalysisReport;
 import com.nongsabu.backend.domain.report.entity.ReportStatus;
 import com.nongsabu.backend.domain.report.repository.ReportAnalysisReportRepository;
+import com.nongsabu.backend.infra.ai.llm.LlmClient;
 import com.nongsabu.backend.infra.external.KamisClient;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -26,6 +29,8 @@ public class ReportService {
     private final ReportAnalysisReportRepository analysisReportRepository;
     private final RagService ragService;
     private final KamisClient kamisClient;
+    private final LlmClient llmClient;
+    private final ExternalApiLogService externalApiLogService;
 
     @Transactional
     public AnalysisReportResponse generate(Long memberId, Long imageId) {
@@ -40,34 +45,135 @@ public class ReportService {
                 3
         );
         String ragContext = String.join("\n---\n", ragContextList);
-        String cropSummary = image.getFarm().getCropSummary();
-        String marketContext = kamisClient.getMarketSnapshot(cropSummary == null ? "작물" : cropSummary);
-        String reportText = buildReport(result, ragContext, marketContext);
+        String cropName = resolveCropName(image);
+        ExternalCallResult marketResult = getMarketContext(cropName);
+        LlmGenerationResult llmResult = generateReportText(image, result, ragContext, marketResult.content());
 
         AnalysisReport report = analysisReportRepository.findByUploadedImageId(imageId)
                 .orElseGet(() -> analysisReportRepository.save(AnalysisReport.builder()
                         .uploadedImage(image)
-                        .reportText(reportText)
+                        .reportText(llmResult.reportText())
                         .ragContext(ragContext)
-                        .externalMarketContext(marketContext)
+                        .externalMarketContext(marketResult.content())
                         .status(ReportStatus.GENERATED)
                         .build()));
-        report.refresh(reportText, ragContext, marketContext, ReportStatus.GENERATED);
+        report.refresh(llmResult.reportText(), ragContext, marketResult.content(), ReportStatus.GENERATED);
+
+        externalApiLogService.logKamisMarketSnapshot(
+                memberId,
+                report.getId(),
+                cropName,
+                marketResult.success(),
+                marketResult.errorMessage()
+        );
+        externalApiLogService.logLlmGeneration(
+                memberId,
+                report.getId(),
+                "analysis-report",
+                llmResult.prompt(),
+                llmResult.context(),
+                llmResult.generatedText(),
+                llmResult.success(),
+                llmResult.errorMessage()
+        );
 
         return AnalysisReportResponse.from(report);
     }
 
-    private String buildReport(ImageAnalysisResult result, String ragContext, String marketContext) {
+    private ExternalCallResult getMarketContext(String cropName) {
+        try {
+            return new ExternalCallResult(kamisClient.getMarketSnapshot(cropName), true, null);
+        } catch (RuntimeException exception) {
+            return new ExternalCallResult("시장 정보 조회에 실패했습니다: " + exception.getMessage(), false, exception.getMessage());
+        }
+    }
+
+    private LlmGenerationResult generateReportText(
+            UploadedImage image,
+            ImageAnalysisResult result,
+            String ragContext,
+            String marketContext
+    ) {
+        String prompt = buildLlmPrompt(image, result);
+        String context = buildLlmContext(ragContext, marketContext);
+        try {
+            String generated = llmClient.generate(prompt, context);
+            if (StringUtils.isNotBlank(generated)) {
+                return new LlmGenerationResult(generated, prompt, context, generated, true, null);
+            }
+            return new LlmGenerationResult(
+                    buildRuleBasedReport(result, ragContext, marketContext),
+                    prompt,
+                    context,
+                    generated,
+                    false,
+                    "LLM 응답이 비어 있습니다."
+            );
+        } catch (Exception ignored) {
+            // 로컬 MVP에서는 외부 LLM 설정이 없어도 리포트 생성 흐름을 검증할 수 있어야 한다.
+            return new LlmGenerationResult(
+                    buildRuleBasedReport(result, ragContext, marketContext),
+                    prompt,
+                    context,
+                    null,
+                    false,
+                    ignored.getMessage()
+            );
+        }
+    }
+
+    private String resolveCropName(UploadedImage image) {
+        if (image.getCrop() != null) {
+            return image.getCrop().getName();
+        }
+        return "작물";
+    }
+
+    private String buildLlmPrompt(UploadedImage image, ImageAnalysisResult result) {
+        return """
+                작물: %s
+                진단명: %s
+                신뢰도: %.2f
+                위험도: %s
+                분석 요약: %s
+                1차 권장 조치: %s
+
+                위 정보를 바탕으로 초보 농가가 바로 따라 할 수 있는 대처 리포트를 작성하세요.
+                리포트에는 요약, 의심 원인, 즉시 조치, 관찰 체크리스트, 전문가 상담 권고를 포함하세요.
+                """.formatted(
+                resolveCropName(image),
+                result.getDiseaseName(),
+                result.getConfidence(),
+                result.getSeverity(),
+                result.getSummary(),
+                result.getRecommendation()
+        );
+    }
+
+    private String buildLlmContext(String ragContext, String marketContext) {
+        return """
+                [RAG 문서 근거]
+                %s
+
+                [외부 시장 정보]
+                %s
+                """.formatted(
+                StringUtils.isBlank(ragContext) ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
+                marketContext
+        );
+    }
+
+    private String buildRuleBasedReport(ImageAnalysisResult result, String ragContext, String marketContext) {
         return """
                 [병충해 분석 요약]
                 - 진단: %s
                 - 신뢰도: %.2f
-                - 심각도: %s
+                - 위험도: %s
 
                 [1차 대처 가이드]
                 %s
 
-                [RAG 매뉴얼 문맥]
+                [RAG 매뉴얼 근거]
                 %s
 
                 [외부 시장 정보]
@@ -77,8 +183,21 @@ public class ReportService {
                 result.getConfidence(),
                 result.getSeverity(),
                 result.getRecommendation(),
-                ragContext.isBlank() ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
+                StringUtils.isBlank(ragContext) ? "관련 매뉴얼 문맥이 없습니다." : ragContext,
                 marketContext
         );
+    }
+
+    private record ExternalCallResult(String content, boolean success, String errorMessage) {
+    }
+
+    private record LlmGenerationResult(
+            String reportText,
+            String prompt,
+            String context,
+            String generatedText,
+            boolean success,
+            String errorMessage
+    ) {
     }
 }
